<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/search"
        android:title="@string/search_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/dwp_bookmark_switch"
        android:title="@string/dwp_bookmark"
        android:icon="@drawable/star_border"
        app:showAsAction="always" />

    <item
        android:id="@+id/dwp_menu_update"
        android:title="@string/update" />

    <item
        android:checkable="false"
        android:checked="false"
        android:enabled="false"
        android:title="@string/string_divider" />

    <item
        android:id="@+id/dwp_menu_delete"
        android:title="@string/delete" />
</menu>