<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?actionBarSize">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dwp_preview_tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dwp_definition_tab" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dwp_conjugation_tab2"
                />
        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dwp_preview_card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/dwp_preview_viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout="@layout/dwp_definition_tab" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/dwp_preview_form_menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/dwp_preview_menu"
        android:theme="@style/Custom.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        app:popupTheme="@style/CustomPopupMenu"
        app:title="@string/preview"/>
</FrameLayout>