<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="?actionBarSize">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/upsert_recycler_card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upsert_recycler_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp" />

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/upsert_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/confirm" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/upsert_preview_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="48dp"
        android:contentDescription="@string/preview"
        android:src="@drawable/preview_24px"
        app:maxImageSize="48dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/upsert_form_menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/upsert_menu"
        android:theme="@style/Custom.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/CustomPopupMenu"
        app:title="@string/app_name" />
</FrameLayout>