<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_filter_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <TextView
            android:id="@+id/search_filter_more_filter_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/dlu_more_filter_button_text"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="48dp"
            app:layout_constraintTop_toBottomOf="@+id/search_filter_sub_class_input_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_filter_search_by_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:hint="@string/search_by"
            app:errorEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/search_filter_bookmark_checkmark"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="488dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/search_filter_search_by_dropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="yes"
                android:inputType="none"
                android:maxLines="1"
                tools:text="woefkpowekjf jfkweojf fwe faf awefawefawfawef fawe" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_filter_main_class_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/main_class"
            app:errorEnabled="false"
            app:layout_constraintEnd_toStartOf="@id/search_filter_sub_class_input_layout"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_filter_search_by_layout"
            app:layout_constraintWidth_max="488dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/search_filter_main_class_input_dropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="yes"
                android:inputType="text"
                android:maxLines="1"
                tools:text="Main class text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_filter_sub_class_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/sub_class"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/search_filter_main_class_input_layout"
            app:layout_constraintTop_toBottomOf="@id/search_filter_search_by_layout"
            app:layout_constraintWidth_max="488dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/search_filter_sub_class_input_dropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="yes"
                android:inputType="text"
                android:maxLines="1"
                tools:text="Sub class text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Shared Error Message -->
        <TextView
            android:id="@+id/search_filter_word_class_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorError"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_filter_main_class_input_layout"
            tools:text="Please select both class types."
            tools:visibility="visible" />


        <CheckBox
            android:id="@+id/search_filter_bookmark_checkmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
