<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="true"
    android:clipToPadding="true"
    android:paddingStart="16dp"
    tools:ignore="RtlSymmetry">

    <!-- Main Word -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:elevation="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/dlu_move_to_detail_page_button"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/dlu_bookmark_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:contentDescription="@string/bookmark_icon_content_description"
            android:minWidth="48dp"
            android:padding="0dp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="0dp"
            app:icon="@drawable/star_border"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="?attr/colorOnBackground" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dlu_overflow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/overflow_icon_content_description"
            android:minWidth="48dp"
            android:padding="0dp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="0dp"
            app:icon="@drawable/overflow"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="?attr/colorOnBackground" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dlu_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/dlu_recycler_primary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:text="日本語" />

        <TextView
            android:id="@+id/dlu_recycler_word_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Noun: Common" />

        <LinearLayout
            android:id="@+id/dlu_first_gloss_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_horizontal"
            android:orientation="vertical"
            android:showDividers="beginning">

            <include layout="@layout/dlu_recycler_item_gloss"
                android:id="@+id/dlu_first_gloss_item"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dlu_expandable_gloss_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_horizontal"
            android:orientation="vertical"
            android:showDividers="middle|beginning|end"
            android:visibility="gone"
            tools:visibility="visible">

            <include layout="@layout/dlu_recycler_item_gloss" />

            <include layout="@layout/dlu_recycler_item_gloss" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dlu_expand_detail_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="48dp"
        android:text="@string/dlu_expand_detail"
        android:textColor="?attr/colorOnBackground"
        app:icon="@drawable/arrow_drop_down"
        app:iconGravity="textStart"
        app:iconTint="?attr/colorOnBackground"
        app:layout_constraintTop_toBottomOf="@+id/dlu_detail_layout"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dlu_move_to_detail_page_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/transparent_to_color_gradient_background"
        android:elevation="1dp"
        android:translationZ="1dp"
        app:icon="@drawable/arrow_forward"
        app:iconGravity="end"
        app:iconPadding="8dp"
        app:iconSize="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/dlu_expand_detail_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/move_to_detail_page_content_description"/>
</androidx.constraintlayout.widget.ConstraintLayout>